# solarium

./: .env.example  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Dockerfile.agent  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .env.example  README.md  package.json  tsconfig.json  validator-key.json  worker-key.json
agent/src/: chain.ts  config.ts  gemini.ts  index.ts  init.ts  keeper.ts  logger.ts  tasks.ts  test_gemini.ts  validator.ts  worker.ts
agent/tests/e2e/: 1_happy_path.ts  2_scam.ts  3_adversarial.ts  rogue_worker.ts
core/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
core/keys/: deployer-id.json
core/programs/solarium/: Cargo.toml
core/programs/solarium/src/: constants.rs  errors.rs  lib.rs
core/programs/solarium/src/instructions/: cancel_task.rs  challenge_task.rs  claim_rewards.rs  claim_task.rs  commit_result.rs  create_task.rs  deposit_stake.rs  execute_withdrawal.rs  finalize_task.rs  initialize_protocol.rs  mod.rs  register_node.rs  request_withdrawal.rs  reveal_result.rs  timeout_task.rs
core/programs/solarium/src/instructions/consensus/: mod.rs  utils.rs
core/programs/solarium/src/state/: commit.rs  mod.rs  node.rs  protocol.rs  task.rs
core/tests/: 01_setup.ts  02_task_lifecycle.ts  03_error_paths.ts  04_slashing.ts  05_timeout_task.ts  06_invalid_vote.ts  07_challenge.ts  08_withdraw_cooldown.ts
core/tests/helpers/: constants.ts  crypto.ts  index.ts  keys.ts  pda.ts  setup.ts
platform/: README.md
platform/apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts
(+156 files in other folders)
