[package]
name = "solarium"
version = "0.1.0"
description = "Solarium Protocol - Decentralized Verifiable AI Inference Network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solarium"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
